[workspace]
resolver = "2"
members = [
  "./crates/backend",
  "./crates/build",
  "./crates/macro",
  "./crates/napi",
  "./crates/sys",
  "./examples/napi",
  "./examples/napi-shared",
  "./examples/napi-compat-mode",
  "./examples/binary",
  "./bench",
  "./memory-testing",
]

exclude = ["./testing"]

[profile.release]
lto = true
