[workspace]
resolver = "2"
members = [
  "./crates/backend",
  "./crates/build",
  "./crates/macro",
  "./crates/napi",
  "./crates/sys",
  "./examples/napi",
  "./examples/napi-shared",
  "./examples/napi-compat-mode",
  "./examples/binary",
  "./bench",
  "./memory-testing",
  "./examples/napi-cargo-test",
]

exclude = ["./testing"]

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"     # Must be opt-in
print_stderr = "warn"     # Must be opt-in
allow_attributes = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[profile.release]
lto = true

[profile.wasi]
inherits = "release"
opt-level = "z"
debug = true

[profile.napi-rs-custom]
inherits = "dev"
codegen-units = 1024
