[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "napi-bench"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { path = "../crates/napi", features = [
  "tokio_rt",
  "serde-json",
  "compat-mode",
] }
napi-derive = { path = "../crates/macro", features = ["compat-mode"] }
serde = "1"
serde_json = "1"

[target.'cfg(all(target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = { version = "0.1" }

[build-dependencies]
napi-build = { path = "../crates/build" }
