[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2018"
name = "napi-examples"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-derive = { path = "../crates/macro", features = ["type-def"] }
napi = { path = "../napi", features = ["latin1"] }

[build-dependencies]
napi-build = { path = "../build" }