[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2018"
name = "napi-derive-example"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { path = "../napi", default-features = false }
napi-derive = {path = "../napi-derive"}

[build-dependencies]
napi-build = {path = "../build"}
