[package]
name = "napi-derive"
version = "0.4.1"
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2018"
description = "N-API procedural macros"
readme = "README.md"
repository = "https://github.com/napi-rs/napi-rs"
license = "MIT"
keywords = ["NodeJS", "FFI", "NAPI", "n-api"]

[dependencies]
syn = { version = "1.0", features = ["fold", "full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
