[package]
authors = ["Nathan Sobo <nathan@github.com>", "Yinan Long <lynweklm@gmail.com>"]
description = "N-API bindings"
edition = "2018"
keywords = ["NodeJS", "FFI", "NAPI", "n-api"]
license = "MIT"
name = "napi"
readme = "README.md"
repository = "https://github.com/napi-rs/napi-rs"
version = "0.5.1"

[features]
latin1 = ["encoding_rs"]
libuv = ["futures"]
serde-json = ["serde", "serde_json"]
tokio_rt = ["futures", "tokio", "once_cell"]

[dependencies]
napi-sys = {version = "0.4", path = "../sys"}

[dependencies.encoding_rs]
optional = true
version = "0.8"

[dependencies.futures]
optional = true
version = "0.3"

[dependencies.tokio]
features = ["rt-core", "rt-threaded", "sync"]
optional = true
version = "0.3"

[dependencies.once_cell]
optional = true
version = "1.4"

[dependencies.serde]
optional = true
version = "1"

[dependencies.serde_json]
optional = true
version = "1"

[build-dependencies]
napi-build = {version = "0.2", path = "../build"}

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "napidocsrs"]
