[package]
authors = ["Nathan Sobo <nathan@github.com>", "Yinan Long <lynweklm@gmail.com>"]
description = "N-API bindings"
edition = "2018"
keywords = ["Node.js", "Node", "FFI", "NAPI", "n-api"]
license = "MIT"
name = "napi"
readme = "README.md"
repository = "https://github.com/napi-rs/napi-rs"
version = "1.3.4"

[features]
default = ["napi3"] # for most NodeJS users
latin1 = ["encoding_rs"]
napi1 = []
napi2 = ["napi1"]
napi3 = ["napi2", "napi-sys/napi3"]
napi4 = ["napi3", "napi-sys/napi4"]
napi5 = ["napi4", "napi-sys/napi5"]
napi6 = ["napi5", "napi-sys/napi6"]
napi7 = ["napi6", "napi-sys/napi7"]
serde-json = ["serde", "serde_json"]
tokio_rt = ["futures", "tokio", "once_cell", "napi4"]

[dependencies]
napi-sys = {version = "1", path = "../sys"}

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["winuser", "minwindef", "ntdef", "libloaderapi"]}

[dependencies.encoding_rs]
optional = true
version = "0.8"

[dependencies.futures]
optional = true
version = "0.3"

[dependencies.tokio]
features = ["rt", "rt-multi-thread", "sync"]
optional = true
version = "1"

[dependencies.once_cell]
optional = true
version = "1.5"

[dependencies.serde]
optional = true
version = "1"

[dependencies.serde_json]
optional = true
version = "1"

[build-dependencies]
napi-build = {version = "1", path = "../build"}

[package.metadata.docs.rs]
all-features = true
