[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
description = "NodeJS N-API raw binding"
edition = "2018"
include = ["src/**/*", "Cargo.toml", "build.rs", ".node-headers/**/*"]
keywords = ["NodeJS", "FFI", "NAPI", "n-api"]
license = "MIT"
name = "napi-sys"
readme = "README.md"
repository = "https://github.com/napi-rs/napi-rs"
version = "0.4.7"

[build-dependencies]
bindgen = {version = "0.55", default-features = false, features = ["logging", "runtime"]}
glob = "0.3"
napi-build = { path = "../build" }
regex = "1.3"
semver = "0.11"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "napidocsrs"]
