[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
description = "NodeJS N-API raw binding"
edition = "2018"
include = ["src/**/*", "Cargo.toml", "build.rs", ".node-headers/**/*"]
keywords = ["NodeJS", "FFI", "NAPI", "n-api"]
license = "MIT"
name = "napi-sys"
readme = "README.md"
repository = "https://github.com/napi-rs/napi-rs"
version = "1.0.0-alpha.0"

[features]
napi1 = []
napi2 = ["napi1"]
napi3 = ["napi2"]
napi4 = ["napi3"]
napi5 = ["napi4"]
napi6 = ["napi5"]
napi7 = ["napi6"]

[build-dependencies]
napi-build = {version = "1.0.0-alpha.0", path = "../build"}
