[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2018"
name = "napi-test-module"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[features]
latest = ["napi/napi8"]
napi3 = ["napi/napi3"]

[dependencies]
futures = "0.3"
napi = {path = "../napi", features = ["tokio_rt", "serde-json", "latin1"]}
napi-derive = {path = "../napi-derive"}
serde = "1"
serde_bytes = "0.11"
serde_derive = "1"
serde_json = "1"
tokio = {version = "1", features = ["default", "fs"]}

[build-dependencies]
napi-build = {path = "../build"}

[profile.release]
lto = true
