[package]
description = "Codegen backend for napi procedural macro"
edition = "2021"
homepage = "https://napi.rs"
license = "MIT"
name = "napi-derive-backend"
readme = "README.md"
repository = "https://github.com/napi-rs/napi-rs"
rust-version.workspace = true
version = "4.0.0"

[package.metadata.workspaces]
independent = true

[features]
noop = []
strict = []
tracing = []
type-def = ["semver"]

[dependencies]
convert_case = "0.10"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["fold", "full", "extra-traits"] }

[dependencies.semver]
optional = true
version = "1"

[dev-dependencies]
serde_json = "1"
