[package]
name = "napi-cli"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["LongYinan <lynweklm@gmail.com>", "Forehalo <forehalo@gmail.com>"]
description = "A command line interface for Node API Rust bindings"
keywords = ["NodeJS", "FFI", "NAPI", "n-api"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/napi-rs/napi-rs"
exclude = ["index.js", "package.json"]

[[bin]]
name = "napi"
path = "src/main.rs"

[dependencies]
clap = { version = "3", features = ["derive", "env", "cargo"] }
clap-cargo = "0.9"
cargo_metadata = "0.15"
rand = "0.8"
log = { version = "0.4", features = ["std"] }
dialoguer = "0.10"
minijinja = "0.17"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = "1"
