[package]
authors = ["LongYinan <lynweklm@gmail.com>", "Forehalo <forehalo@gmail.com>"]
description = "N-API procedural macros"
edition = "2021"
keywords = ["NodeJS", "FFI", "NAPI", "n-api"]
license = "MIT"
name = "napi-derive"
readme = "README.md"
repository = "https://github.com/napi-rs/napi-rs"
rust-version.workspace = true
version = "3.4.0"

[package.metadata.workspaces]
independent = true

[features]
compat-mode = []
default = ["type-def", "strict"]
full = ["type-def", "strict", "compat-mode"]
noop = ["napi-derive-backend/noop"]
strict = ["napi-derive-backend/strict"]
tracing = ["napi-derive-backend/tracing"]
type-def = ["napi-derive-backend/type-def", "ctor"]

[dependencies]
convert_case = "0.10"
ctor = { version = "0.6", optional = true }
napi-derive-backend = { version = "4.0.0", path = "../backend" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["fold", "full", "extra-traits"] }

[lib]
proc-macro = true
