[package]
name = "napi-cargo-test"
version = "0.1.0"
edition = "2021"
publish = false

[features]
noop = ["napi/noop", "napi-derive/noop"]

[dependencies]
napi = { path = "../../crates/napi", features = ["napi10"] }
napi-derive = { path = "../../crates/macro", features = ["type-def"] }

[build-dependencies]
napi-build = { path = "../../crates/build" }

[lints]
workspace = true
