[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "napi-shared"
publish = false
version = "0.1.0"

[dependencies]
napi = { path = "../../crates/napi", default-features = false, features = [
  "napi8",
  "serde-json",
  "async",
  "experimental",
  "latin1",
  "chrono_date",
] }
napi-derive = { path = "../../crates/macro", features = ["type-def"] }

[build-dependencies]
napi-build = { path = "../../crates/build" }
