[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "napi-examples"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["tokio_rt"]
tokio_rt = [
  "napi/tokio",
  "napi/tokio_macros",
  "napi/tokio_io_util",
  "napi/tokio_time",
]
compio_rt = ["napi/compio", "napi/compio_time"]
snmalloc = ["snmalloc-rs"]
mimalloc = ["mimalloc-safe"]
dyn-symbols = ["napi/dyn-symbols"]
error_try_builds = []
noop = ["napi/noop"]
cfg_attr_napi = [
] # for testing cfg_attr(not(feature = "noop"), napi_derive::napi) attribute

[dependencies]
anyhow = "1"
chrono = "0.4"
futures = "0.3"
futures-util = { version = "0.3", features = ["io"] }
bytes = "1"
napi-derive = { path = "../../crates/macro", features = ["type-def"] }
napi-shared = { path = "../napi-shared" }
serde = "1"
serde_bytes = "0.11"
serde_derive = "1"
serde_json = "1"
indexmap = "2"
rustc-hash = "2"
napi = { path = "../../crates/napi", default-features = false, features = [
  "napi10",
  "serde-json",
  "experimental",
  "latin1",
  "chrono_date",
  "object_indexmap",
  "deferred_trace",
  "node_version_detect",
  "web_stream",
  "error_anyhow",
] }

[dependencies.snmalloc-rs]
version = "0.3"
features = ["build_cc", "local_dynamic_tls"]
optional = true

[dependencies.mimalloc-safe]
version = "0.1"
optional = true
features = ["skip_collect_on_exit"]

[build-dependencies]
napi-build = { path = "../../crates/build" }

[dev-dependencies]
trybuild = "1.0"
